--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: node_js
 node_js:
-  - "0.12"
-  - "0.11"
-  - "0.10"
+  - "iosjs"
+  - "8"
+
+install:
+  - npm install
+
+script:
+  - npm test
